Improve WhatsApp metadata compatibility
- Add WhatsApp-specific meta tags (og:image:url, twitter:image:src)
- Include og:image:secure_url for HTTPS compatibility
- Add og:image:type and og:image:alt for better image handling
- Include og:site_name and og:locale for complete metadata
- Update both homepage and review pages with WhatsApp-friendly tags
- Regenerate all review pages with improved metadata
- Enhance social media sharing compatibility across platforms
- Ensure proper image and text previews in WhatsApp links

--- a/review/11.html
+++ b/review/11.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/11">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/11">
     <meta property="og:title" content="Prey (2022) Review - SnarkAI Score: 72/100 | Snarkflix">
     <meta property="og:description" content="Prey (2022) - Based on the information provided in the review, I would assign "Prey" a score of 72. The movie is praised for its beautiful landscapes, tense action scenes, and strong protagonist, Naru, as well as t...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/prey/header-prey.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/prey/header-prey.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Prey (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/prey/header-prey.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/prey/header-prey.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
