--- a/review/13.html
+++ b/review/13.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/13">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/13">
     <meta property="og:title" content="Cocaine Bear (2023) Review - SnarkAI Score: 60/100 | Snarkflix">
     <meta property="og:description" content="Cocaine Bear (2023) - Based on the review provided, this movie seems to be an odd mix of humor, absurdity, and action, with a somewhat disjointed plot. The reviewer found some parts of the movie funny, but it may not be th...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/cocaine-bear/header-cocaine-bear.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/cocaine-bear/header-cocaine-bear.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Cocaine Bear (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/cocaine-bear/header-cocaine-bear.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/cocaine-bear/header-cocaine-bear.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
