--- a/review/14.html
+++ b/review/14.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/14">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/14">
     <meta property="og:title" content="The Whale (2022) Review - SnarkAI Score: 85/100 | Snarkflix">
     <meta property="og:description" content="The Whale (2022) - "The Whale" is a cinematic journey that's as intimate as it is uncomfortable. It's a claustrophobic exploration of self-loathing, redemption, and the human capacity for both cruelty and kindness. Bren...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-whale/header-the-whale.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-whale/header-the-whale.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Whale (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-whale/header-the-whale.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-whale/header-the-whale.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
