--- a/review/16.html
+++ b/review/16.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/16">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/16">
     <meta property="og:title" content="Winnie the Pooh: Blood and Honey (2023) Review - SnarkAI Score: 18/100 | Snarkflix">
     <meta property="og:description" content="Winnie the Pooh: Blood and Honey (2023) - The reviewer heavily criticizes the film for its poor execution, confusing plot, shallow character development, and lack of closure. While there are a few praised elements, such as some line drawings ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Winnie the Pooh: Blood and Honey (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/winnie-the-pooh-blood-honey/header-winnie-the-pooh-blood-honey.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
