--- a/review/17.html
+++ b/review/17.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/17">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/17">
     <meta property="og:title" content="Pinocchio (2022) Review - SnarkAI Score: 65/100 | Snarkflix">
     <meta property="og:description" content="Pinocchio (2022) - While the puppets are beautiful and the stop-motion animation is impressive, the plot seems disjointed and confusing at times. The dark themes and mature content may not be suitable for younger audien...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/pinocchio-2022/header-pinocchio-2022.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/pinocchio-2022/header-pinocchio-2022.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Pinocchio (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/pinocchio-2022/header-pinocchio-2022.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/pinocchio-2022/header-pinocchio-2022.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
