--- a/review/19.html
+++ b/review/19.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/19">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/19">
     <meta property="og:title" content="M3GAN (2023) Review - SnarkAI Score: 30/100 | Snarkflix">
     <meta property="og:description" content="M3GAN (2023) - The review suggests that the movie has a lot of flaws, such as poor character development, questionable plot decisions, and an overall lack of coherence. Additionally, the reviewer appears to be criti...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/m3gan/header-m3gan.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/m3gan/header-m3gan.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="M3GAN (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/m3gan/header-m3gan.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/m3gan/header-m3gan.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
