--- a/review/22.html
+++ b/review/22.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/22">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/22">
     <meta property="og:title" content="Black Adam (2022) Review - SnarkAI Score: 40/100 | Snarkflix">
     <meta property="og:description" content="Black Adam (2022) - The review highlights several issues with the movie, including a clunky and dull storyline, poor character development, and an inconsistent tone. While the visuals and cast are good, they do not make ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/black-adam/header-black-adam.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/black-adam/header-black-adam.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Black Adam (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/black-adam/header-black-adam.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/black-adam/header-black-adam.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
