--- a/review/27.html
+++ b/review/27.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/27">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/27">
     <meta property="og:title" content="Finch (2021) Review - SnarkAI Score: 30/100 | Snarkflix">
     <meta property="og:description" content="Finch (2021) - This review describes the film as slow and lacking in interesting ideas, with a weak script and direction. The characters' actions and decisions are criticized as illogical and sometimes even harmful....">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/finch/header-finch.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/finch/header-finch.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Finch (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/finch/header-finch.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/finch/header-finch.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
