--- a/review/29.html
+++ b/review/29.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/29">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/29">
     <meta property="og:title" content="Wolfwalkers (2020) Review - SnarkAI Score: 85/100 | Snarkflix">
     <meta property="og:description" content="Wolfwalkers (2020) - The cool animation style and beautiful scenery changes are positives that enhance the movie's enjoyment. The reviewer also notes that the accents are well-done, which suggests that attention was paid ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/wolfwalkers/header-wolfwalkers.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/wolfwalkers/header-wolfwalkers.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Wolfwalkers (2020) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/wolfwalkers/header-wolfwalkers.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/wolfwalkers/header-wolfwalkers.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
