--- a/review/33.html
+++ b/review/33.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/33">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/33">
     <meta property="og:title" content="Encanto (2021) Review - SnarkAI Score: 60/100 | Snarkflix">
     <meta property="og:description" content="Encanto (2021) - tldr: Based on the review, it seems that the movie has some strong elements, particularly in the form of Luisa's song, but also suffers from a toxic and abusive family dynamic that leaves some charact...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/encanto-2021/header-encanto.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/encanto-2021/header-encanto.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Encanto (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/encanto-2021/header-encanto.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/encanto-2021/header-encanto.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
