--- a/review/38.html
+++ b/review/38.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/38">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/38">
     <meta property="og:title" content="Zack Snyder's Justice League (2021) Review - SnarkAI Score: 41/100 | Snarkflix">
     <meta property="og:description" content="Zack Snyder's Justice League (2021) - tldr: If you've got a spare eon and enjoy seeing superheroes in a midlife crisis, this film's for you. 'Justice League: Snyder Cut' redefines 'epic' in length, if not in substance. A cinematic equival...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Zack Snyder's Justice League (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
