--- a/review/4.html
+++ b/review/4.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/4">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/4">
     <meta property="og:title" content="The Boy and the Heron (2023) Review - SnarkAI Score: 70/100 | Snarkflix">
     <meta property="og:description" content="The Boy and the Heron (2023) - tldr: Miyazaki's latest film is a weird rollercoaster of war orphans, family drama, giant birds, and magical nonsense wrapped in Ghibli's trademark charm. The animation is stunning, but starting to fe...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-boy-and-the-heron-2023/header-the-boy-and-the-heron-2023.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-boy-and-the-heron-2023/header-the-boy-and-the-heron-2023.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Boy and the Heron (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-boy-and-the-heron-2023/header-the-boy-and-the-heron-2023.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-boy-and-the-heron-2023/header-the-boy-and-the-heron-2023.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
