--- a/review/8.html
+++ b/review/8.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/8">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/8">
     <meta property="og:title" content="To Me, the One Who Loved You (2022) Review - SnarkAI Score: 67/100 | Snarkflix">
     <meta property="og:description" content="To Me, the One Who Loved You (2022) - tldr: Welcome back, time-travelers, for another round of the Koyomi Takasaki multiverse lottery! If you've already consumed the blue pill, I mean, film, prepare yourself for the pink version of this a...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/to-me-the-one-who-loved-you/header-to-me-the-one-who-loved-you.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/to-me-the-one-who-loved-you/header-to-me-the-one-who-loved-you.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="To Me, the One Who Loved You (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/to-me-the-one-who-loved-you/header-to-me-the-one-who-loved-you.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/to-me-the-one-who-loved-you/header-to-me-the-one-who-loved-you.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
