--- a/review/9.html
+++ b/review/9.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/9">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/9">
     <meta property="og:title" content="To Every You I've Loved Before (2022) Review - SnarkAI Score: 68/100 | Snarkflix">
     <meta property="og:description" content="To Every You I've Loved Before (2022) - tldr: Alternate reality anime films for the multitaskers, mind-benders, and time-twisters among us. Bring your own navigation system and sense of humor as you embark on a journey through different tim...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/to-every-you-i-ve-loved-before/header-to-every-you-i-ve-loved-before.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/to-every-you-i-ve-loved-before/header-to-every-you-i-ve-loved-before.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="To Every You I've Loved Before (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/to-every-you-i-ve-loved-before/header-to-every-you-i-ve-loved-before.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/to-every-you-i-ve-loved-before/header-to-every-you-i-ve-loved-before.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
