--- a/index.html
+++ b/index.html
@@ -19,14 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://snarkflix.netlify.app/">
     <meta property="og:title" content="Snarkflix - Snarky Movie Reviews">
     <meta property="og:description" content="A snarky movie review blog with sharp wit and adorable Bernedoodle companion. Honest, humorous takes on cinema.">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
+    <meta property="og:image:type" content="image/avif">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Snarkflix - Snarky Movie Reviews">
+    <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
