--- a/review/1.html
+++ b/review/1.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/1">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/1">
     <meta property="og:title" content="Superman (2025) Review - SnarkAI Score: 81/100 | Snarkflix">
     <meta property="og:description" content="Superman (2025) - tldr: James Gunn breathes fresh, colourful life into Superman, delivering the hopeful hero Snyder never could, complete with perfectly snarky Lois, a petty genius Lex, and a hilariously awkward accide...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/superman-2025/header-superman.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/superman-2025/header-superman.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Superman (2025) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/superman-2025/header-superman.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/superman-2025/header-superman.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
