--- a/review/10.html
+++ b/review/10.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/10">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/10">
     <meta property="og:title" content="The Super Mario Bros. Movie (2023) Review - SnarkAI Score: 45/100 | Snarkflix">
     <meta property="og:description" content="The Super Mario Bros. Movie (2023) - A colourful, loud, and recognizable film that will entertain kids but leaves much to be desired for the discerning viewer. It's less of a film and more of a 90-minute advert for Nintendo's Mario franc...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Super Mario Bros. Movie (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-super-mario-bros-movie-2023/header-the-super-mario-bros-movie-2023.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
