--- a/review/12.html
+++ b/review/12.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/12">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/12">
     <meta property="og:title" content="The Royal Tenenbaums (2001) Review - SnarkAI Score: 85/100 | Snarkflix">
     <meta property="og:description" content="The Royal Tenenbaums (2001) - The review highlights the film's strong cast, unique style, and engaging story, as well as the subtle use of Wes Anderson's signature elements. The film is described as a grounded and strong story of ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-royal-tenenbaums/header-the-royal-tenenbaums.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-royal-tenenbaums/header-the-royal-tenenbaums.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Royal Tenenbaums (2001) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-royal-tenenbaums/header-the-royal-tenenbaums.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-royal-tenenbaums/header-the-royal-tenenbaums.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
