--- a/review/15.html
+++ b/review/15.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/15">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/15">
     <meta property="og:title" content="Dungeons & Dragons: Honour Amongst Thieves (2023) Review - SnarkAI Score: 90/100 | Snarkflix">
     <meta property="og:description" content="Dungeons & Dragons: Honour Amongst Thieves (2023) - The reviewer describes the movie as a fun and faithful portrayal of a D&D campaign, with plenty of nods to the source material and a lot of heart. The diverse cast of characters and the various backst...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/dungeons-dragons-honour-amongst-thieves-2023/header-dungeons-dragons-honour-amongst-thieves-2023.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/dungeons-dragons-honour-amongst-thieves-2023/header-dungeons-dragons-honour-amongst-thieves-2023.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Dungeons & Dragons: Honour Amongst Thieves (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/dungeons-dragons-honour-amongst-thieves-2023/header-dungeons-dragons-honour-amongst-thieves-2023.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/dungeons-dragons-honour-amongst-thieves-2023/header-dungeons-dragons-honour-amongst-thieves-2023.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
