--- a/review/18.html
+++ b/review/18.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/18">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/18">
     <meta property="og:title" content="Avatar: The Way of Water (2022) Review - SnarkAI Score: 45/100 | Snarkflix">
     <meta property="og:description" content="Avatar: The Way of Water (2022) - The review suggests that the movie has several problematic aspects, including ableism, racism, and an inconsistent narrative that fails to adequately address several key issues. Additionally, the revi...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/avatar-the-way-of-water-2022/header-avatar-the-way-of-water-2022.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/avatar-the-way-of-water-2022/header-avatar-the-way-of-water-2022.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Avatar: The Way of Water (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/avatar-the-way-of-water-2022/header-avatar-the-way-of-water-2022.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/avatar-the-way-of-water-2022/header-avatar-the-way-of-water-2022.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
