--- a/review/2.html
+++ b/review/2.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/2">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/2">
     <meta property="og:title" content="Wicked (2024) Review - SnarkAI Score: 65/100 | Snarkflix">
     <meta property="og:description" content="Wicked (2024) - tldr: There's magic in Wicked, but it's buried under layers of inconsistent tone, pacing issues, and a runtime that feels as long as the Yellow Brick Road. Die-hard fans of the musical will find much ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/wicked-2024/header-wicked.webp">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/wicked-2024/header-wicked.webp">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Wicked (2024) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/wicked-2024/header-wicked.webp">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/wicked-2024/header-wicked.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
