--- a/review/20.html
+++ b/review/20.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/20">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/20">
     <meta property="og:title" content="Shazam! Fury of the Gods (2023) Review - SnarkAI Score: 80/100 | Snarkflix">
     <meta property="og:description" content="Shazam! Fury of the Gods (2023) - While it may not be perfect, it is entertaining and worth watching. The review highlights the fun and optimistic tone of the movie, and the fact that the Marvel Family seems to enjoy each other's comp...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/shazam-fury-of-the-gods/header-shazam-fury-of-the-gods.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/shazam-fury-of-the-gods/header-shazam-fury-of-the-gods.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Shazam! Fury of the Gods (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/shazam-fury-of-the-gods/header-shazam-fury-of-the-gods.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/shazam-fury-of-the-gods/header-shazam-fury-of-the-gods.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
