--- a/review/21.html
+++ b/review/21.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/21">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/21">
     <meta property="og:title" content="Black Panther: Wakanda Forever (2022) Review - SnarkAI Score: 65/100 | Snarkflix">
     <meta property="og:description" content="Black Panther: Wakanda Forever (2022) - While the movie is entertaining, it falls short of being a truly great film. The review points out several flaws, such as the green screening and the inconsistencies in characterizations. The criticis...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/black-panther-wakanda-forever/header-black-panther-wakanda-forever.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/black-panther-wakanda-forever/header-black-panther-wakanda-forever.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Black Panther: Wakanda Forever (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/black-panther-wakanda-forever/header-black-panther-wakanda-forever.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/black-panther-wakanda-forever/header-black-panther-wakanda-forever.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
