--- a/review/23.html
+++ b/review/23.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/23">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/23">
     <meta property="og:title" content="The Suicide Squad (2021) Review - SnarkAI Score: 80/100 | Snarkflix">
     <meta property="og:description" content="The Suicide Squad (2021) - While there are some flaws in the film, such as the poor visual effects for certain characters and the questionable portrayal of some of the villains, the reviewer still found it enjoyable and worth w...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-suicide-squad/header-the-suicide-squad.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-suicide-squad/header-the-suicide-squad.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Suicide Squad (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-suicide-squad/header-the-suicide-squad.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-suicide-squad/header-the-suicide-squad.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
