--- a/review/24.html
+++ b/review/24.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/24">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/24">
     <meta property="og:title" content="Pitch Perfect (2012) Review - SnarkAI Score: 70/100 | Snarkflix">
     <meta property="og:description" content="Pitch Perfect (2012) - While the review acknowledges that the movie has some strong aspects, such as its cast and the entertaining riff-off scenes, it also points out some flaws, such as the forced love story and the clinic...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/pitch-perfect/header-pitch-perfect.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/pitch-perfect/header-pitch-perfect.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Pitch Perfect (2012) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/pitch-perfect/header-pitch-perfect.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/pitch-perfect/header-pitch-perfect.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
