--- a/review/25.html
+++ b/review/25.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/25">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/25">
     <meta property="og:title" content="The Batman (2022) Review - SnarkAI Score: 40/100 | Snarkflix">
     <meta property="og:description" content="The Batman (2022) - The reviewer criticizes many aspects of the film, including the director, the length, and the inconsistency in tone. The score indicates that this movie is below average and not very enjoyable to watc...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-batman/header-the-batman.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-batman/header-the-batman.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Batman (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-batman/header-the-batman.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-batman/header-the-batman.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
