--- a/review/26.html
+++ b/review/26.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/26">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/26">
     <meta property="og:title" content="Moonfall (2022) Review - SnarkAI Score: 10/100 | Snarkflix">
     <meta property="og:description" content="Moonfall (2022) - Based on the review provided, it seems that the movie in question was very poorly received by the reviewer. Given the negative tone and language used in the review, I would assign this movie a score o...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/moonfall/header-moonfall.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/moonfall/header-moonfall.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Moonfall (2022) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/moonfall/header-moonfall.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/moonfall/header-moonfall.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
