--- a/review/28.html
+++ b/review/28.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/28">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/28">
     <meta property="og:title" content="The Man Who Killed Hitler and Then the Bigfoot (2018) Review - SnarkAI Score: 40/100 | Snarkflix">
     <meta property="og:description" content="The Man Who Killed Hitler and Then the Bigfoot (2018) - The review suggests that it is not a good film and not bad enough to be enjoyable. The plot seems nonsensical, and the attempted seriousness of the movie clashes with its absurd premise. The review al...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Man Who Killed Hitler and Then the Bigfoot (2018) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-man-who-killed-hitler-and-then-the-bigfoot/header-the-man-who-killed-hitler-and-then-the-bigfoot.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
