--- a/review/30.html
+++ b/review/30.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/30">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/30">
     <meta property="og:title" content="No Time to Die (2021) Review - SnarkAI Score: 30/100 | Snarkflix">
     <meta property="og:description" content="No Time to Die (2021) - The lack of coherence in the script and the silly opening scene would make it difficult for viewers to take the movie seriously. The age difference between Bond and his girlfriend is also a point of c...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/no-time-to-die/header-no-time-to-die.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/no-time-to-die/header-no-time-to-die.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="No Time to Die (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/no-time-to-die/header-no-time-to-die.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/no-time-to-die/header-no-time-to-die.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
