--- a/review/31.html
+++ b/review/31.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/31">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/31">
     <meta property="og:title" content="Fantastic Four: First Steps (2025) Review - SnarkAI Score: 82/100 | Snarkflix">
     <meta property="og:description" content="Fantastic Four: First Steps (2025) - Retro-futurist flair, clever worldbuilding, and the best-looking Thing ever put on screen make this FF outing the first one that actually feels worthy of the name. Reed is written perfectly—brilliant,...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Fantastic Four: First Steps (2025) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/fantastic-four-first-steps/header-fantastic-four-first-steps.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
