--- a/review/32.html
+++ b/review/32.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/32">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/32">
     <meta property="og:title" content="Don't Look Up (2021) Review - SnarkAI Score: 80/100 | Snarkflix">
     <meta property="og:description" content="Don't Look Up (2021) - While the reviewer mentions some criticisms, such as the similarity to another work and the overuse of close-cropped shots, they also highlight the strong performances by the cast and the compelling s...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/dont-look-up/header-dont-look-up.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/dont-look-up/header-dont-look-up.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Don't Look Up (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/dont-look-up/header-dont-look-up.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/dont-look-up/header-dont-look-up.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
