--- a/review/34.html
+++ b/review/34.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/34">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/34">
     <meta property="og:title" content="Free Guy (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
     <meta property="og:description" content="Free Guy (2021) - tldr: it seems to be an average, unremarkable film with some notable flaws. The critic seems disappointed with the movie's lack of originality and poor execution of its premise. Additionally, the unre...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Free Guy (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
