--- a/review/35.html
+++ b/review/35.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/35">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/35">
     <meta property="og:title" content="Eternals (2021) Review - SnarkAI Score: 70/100 | Snarkflix">
     <meta property="og:description" content="Eternals (2021) - tldr: Based on the review, I would assign this movie a score of 70. While the film has some visually great examples of how to do superpowers in new and interesting ways and is worth a watch if you wan...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Eternals (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
