--- a/review/36.html
+++ b/review/36.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/36">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/36">
     <meta property="og:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
     <meta property="og:description" content="Ghostbusters: Afterlife (2021) - tldr: Based on the review, it seems like the movie heavily relies on nostalgia to carry the film rather than focusing on the story or characters. While the review does not outright say the movie is te...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Ghostbusters: Afterlife (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
