--- a/review/37.html
+++ b/review/37.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/37">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/37">
     <meta property="og:title" content="Black Widow (2021) Review - SnarkAI Score: 65/100 | Snarkflix">
     <meta property="og:description" content="Black Widow (2021) - tldr: Based on the review, I would assign this movie a score of around 65. While it is described as a decent film with strong characterisation for the main character, it suffers from Marvel's lack of ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/black-widow-2021/header-black-widow.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/black-widow-2021/header-black-widow.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Black Widow (2021) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/black-widow-2021/header-black-widow.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/black-widow-2021/header-black-widow.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
