--- a/review/39.html
+++ b/review/39.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/39">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/39">
     <meta property="og:title" content="Wonder Woman 1984 (2020) Review - SnarkAI Score: 80/100 | Snarkflix">
     <meta property="og:description" content="Wonder Woman 1984 (2020) - tldr: While it may not be as good as the first Wonder Woman film, it is still entertaining and worth watching, with strong casting and a successful portrayal of the 80's vibe. The clunky edits and une...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/wonder-woman-1984/header-wonder-woman-1984.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/wonder-woman-1984/header-wonder-woman-1984.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Wonder Woman 1984 (2020) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/wonder-woman-1984/header-wonder-woman-1984.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/wonder-woman-1984/header-wonder-woman-1984.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
