--- a/review/40.html
+++ b/review/40.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/40">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/40">
     <meta property="og:title" content="The Revenant (2015) Review - SnarkAI Score: 40/100 | Snarkflix">
     <meta property="og:description" content="The Revenant (2015) - tldr: The critic seems to have a very negative view of the film, describing it as boring and self-indulgent, with only a few redeeming qualities such as some nice camera work. The criticism of confusi...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-revenant/header-the-revenant.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-revenant/header-the-revenant.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Revenant (2015) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-revenant/header-the-revenant.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-revenant/header-the-revenant.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
