--- a/review/5.html
+++ b/review/5.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/5">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/5">
     <meta property="og:title" content="The Man from Earth (2007) Review - SnarkAI Score: 78/100 | Snarkflix">
     <meta property="og:description" content="The Man from Earth (2007) - tldr: This movie is a low-budget, high-concept gem where all the action happens in one dude's house. John Oldman casually drops a bombshell to his friends: he's a 14,000-year-old Cro-Magnon who's hung...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-man-from-earth-2007/header-the-man-from-earth-2007.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-man-from-earth-2007/header-the-man-from-earth-2007.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Man from Earth (2007) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-man-from-earth-2007/header-the-man-from-earth-2007.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-man-from-earth-2007/header-the-man-from-earth-2007.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
