--- a/review/6.html
+++ b/review/6.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/6">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/6">
     <meta property="og:title" content="Wonka (2023) Review - SnarkAI Score: 35/100 | Snarkflix">
     <meta property="og:description" content="Wonka (2023) - tldr: In a world craving innovation, "Wonka" serves up a stale, half-baked confection. Timothée Chalamet, while easy on the eyes, falls short of the enigmatic chocolatier's legacy, delivering more of ...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/wonka-2024/header-wonka-2024.avif">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/wonka-2024/header-wonka-2024.avif">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Wonka (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/wonka-2024/header-wonka-2024.avif">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/wonka-2024/header-wonka-2024.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
