--- a/review/7.html
+++ b/review/7.html
@@ -19,15 +19,23 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snarkflix.netlify.app/review/7">
     
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/7">
     <meta property="og:title" content="The Marvels (2023) Review - SnarkAI Score: 68/100 | Snarkflix">
     <meta property="og:description" content="The Marvels (2023) - tldr: "The Marvels" is like a cosmic joyride with a few flat tires along the way. Iman Vellani's Kamala Khan brings a nerdy enthusiasm that's as refreshing as finding an untouched slice of pizza the m...">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.png">
+    <meta property="og:image:secure_url" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="The Marvels (2023) Review">
     <meta property="og:site_name" content="Snarkflix">
+    <meta property="og:locale" content="en_US">
+    
+    <!-- WhatsApp specific meta tags -->
+    <meta property="og:image:url" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.png">
+    <meta name="twitter:image:src" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
